Fix JobsRunHistoyrTable icon + CollapsinString wrap

--- a/src/styles/components/collapsing-string.less
+++ b/src/styles/components/collapsing-string.less
@@ -1,4 +1,6 @@
 .collapsing-string {
+  display: block;
+  min-width: 0;
   position: relative;
   white-space: nowrap;
 }
