--- a/src/styles/components/tables.less
+++ b/src/styles/components/tables.less
@@ -184,6 +184,7 @@ components/tables.less
 
     .table-cell-flex-box {
 
+      align-items: center;
       display: flex;
 
     }
